[B]0.9.1[/B]
Add option to hide submenu
Add Arial font

[B]0.9.0[/B]
Initial commit