@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<colors>
+    <color name="PosterBack">55000000</color>
+    <color name="Shadows">00ffffff</color>
+
+</colors>
