@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<colors>
+    <color name="PosterBack">3f444444</color>
+    <color name="Shadows">00ffffff</color>
+    <color name="PixelLines">00ffffff</color>
+</colors>
