@@ -1,6 +1,7 @@
 [B]0.9.1[/B]
 Add option to hide submenu
 Add Arial font
+Add Simple and Dark Glass color schemes
 
 [B]0.9.0[/B]
 Initial commit
